--- a/app/templates/historia/listar.html
+++ b/app/templates/historia/listar.html
@@ -38,7 +38,7 @@
                             <a href="{{ url_for('receta.descargar_pdf', id_receta=receta.id_receta) }}"
                                class="btn btn-sm btn-success mb-1"
                                target="_blank">
-                                📄 Descargar Receta
+                                📄 Descargar PDF
                             </a><br>
                         {% endfor %}
                     {% else %}
